@@ -1010,3 +1010,4 @@
 20040719 ui/fb/fbdisplay.c: check FRAMEBUFFER environment variable for
 	 framebuffer device to use (Darren).
 20040719 ui/fb/fbdisplay.c: hide/restore cursor on startup/exit (Darren).
+20040719 ui/fb/fbdisplay.c: remove unused variables (Darren).
